Start to design comment feature

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,9 @@
-<% @projects.each do |project| %>
-  <%= project.name %>
-<% end %>
+<div>
+  <% @projects.each do |project| %>
+    <div>
+      <%= link_to project_path(project) do %>
+        <%= project.name %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
