--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,6 @@
 <div>
-  <h1 class="text-xl"><%= @project.name %></h1>
+  <h1 class="text-xl text-center"><%= @project.name %></h1>
+  <p><%= @project.description %></p>
 
   <div>
     <% @comments.each do |comment| %>
