--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
-<div class="m-10 flex flex-col gap-y-3">
+<div class="m-10 flex flex-col items-center gap-y-3">
   <% @projects.each do |project| %>
-    <div class="relative p-4 bg-white rounded shadow border border-transparent flex justify-between hover:border-slate-300">
+    <div class="relative w-full max-w-2xl p-4 bg-white rounded shadow border border-transparent flex justify-between hover:border-slate-300">
       <span><%= project.name %></span>
       <span class="flex items-center text-xs px-3 rounded-full <%= project_status_color(project.status) %>">
         <%= project.status.tr('_', ' ').capitalize %>
