--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,29 @@
-<div>
-  <h1 class="text-xl text-center"><%= @project.name %></h1>
-  <p><%= @project.description %></p>
+<div class="flex justify-center">
+  <div class="m-10 bg-white rounded flex flex-col gap-y-5 shadow p-5 max-w-2xl">
+    <h1 class="text-2xl text-center font-semibold"><%= @project.name %></h1>
 
-  <div>
-    <% @comments.each do |comment| %>
-      <p><%= comment.body %></p>
-    <% end %>
-  </div>
+    <div class="border-b pb-5">
+      <p><%= @project.description %></p>
+    </div>
 
-  <div>
-    <%= simple_form_for [@project, @comment] do |f| %>
-      <%= f.input :body, label: false, placeholder: "Add a comment..." %>
-      <%= f.button :submit, "Add Comment" %>
-    <% end %>
+    <div class="flex flex-col gap-y-3">
+      <h2 class="font-semibold">Project History</h2>
+      <% @comments.each do |comment| %>
+        <div class="bg-gray-50 p-3">
+          <div class="flex justify-between">
+            <span class="font-medium"><%= comment.user.username %></span>
+            <span class="text-sm text-slate-500	"><%= comment.created_at.strftime("%B %y - %I:%M%P") %></span>
+          </div>
+          <p><%= comment.body %></p>
+        </div>
+      <% end %>
+    </div>
+
+    <div>
+      <%= simple_form_for [@project, @comment] do |f| %>
+        <%= f.input :body, label: false, placeholder: "Add a comment...", input_html: { class: "w-full" } %>
+        <%= f.button :submit, "Save", class: "px-5 py-2 bg-slate-600 text-white rounded cursor-pointer opacity-80 hover:opacity-100" %>
+      <% end %>
+    </div>
   </div>
 </div>
