--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,35 @@
 <div class="flex justify-center">
   <div class="m-10 bg-white rounded flex flex-col gap-y-5 shadow p-5 max-w-2xl">
-    <h1 class="text-2xl text-center font-semibold"><%= @project.name %></h1>
+    <div class="flex justify-center items-center">
+      <h1 class="text-2xl text-center font-semibold grow"><%= @project.name %></h1>
+      <div
+        data-controller="project-status"
+        data-action="click->project-status#toggle"
+        class="relative"
+      >
+        <div class="cursor-pointer opacity-80 hover:opacity-100">
+          <%= project_status_tag(@project.status) %>
+        </div>
+        <div
+          data-project-status-target="selectStatus"
+          class="absolute bg-white text-right right-0 w-36 p-3 mt-2 rounded shadow hidden"
+        >
+          <div class="flex flex-col items-end gap-y-2">
+            <% Project.statuses.each_key do |status| %>
+              <%= button_to(
+                project_status_tag(status),
+                { action: :update },
+                {
+                  method: :put,
+                  params: { status: status },
+                  class: "opacity-80 hover:opacity-100"
+                }
+              )%>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="border-b pb-5">
       <p><%= @project.description %></p>
