--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
 <div class="m-10 flex flex-col items-center gap-y-3">
+  <h1 class="text-2xl text-center font-semibold grow">Projects</h1>
   <% @projects.each do |project| %>
     <div class="relative w-full max-w-2xl p-4 bg-white rounded shadow border border-transparent flex justify-between hover:border-slate-300">
       <span><%= project.name %></span>
